new changes to test

--- a/public/index.html
+++ b/public/index.html
@@ -125,10 +125,10 @@
         <li>Experiment with emotions for different tones</li>
       </ul>
 
-      <h3>Gemini Flash (Free Tier)</h3>
+      <h3>TinyLlama (100% Free)</h3>
       <p>
-        This uses Gemini 1.5 Flash which has generous free tier limits. 
-        Perfect for dialogue generation with minimal cost!
+        This uses TinyLlama 1.1B Chat running locally on your machine.
+        Completely free with no API costs or rate limits!
       </p>
     </aside>
   </div>
