removed old references, updated readme files

--- a/public/index.html
+++ b/public/index.html
@@ -125,9 +125,9 @@
         <li>Experiment with emotions for different tones</li>
       </ul>
 
-      <h3>TinyLlama (100% Free)</h3>
+      <h3>Qwen Model (100% Free)</h3>
       <p>
-        This uses TinyLlama 1.1B Chat running locally on your machine.
+        This uses Qwen 2.5 3B Instruct running locally on your machine.
         Completely free with no API costs or rate limits!
       </p>
     </aside>
